--- a/public/home.html
+++ b/public/home.html
@@ -10,9 +10,9 @@
     />
     <title>Colectivo Angrama</title>
     <style>
-      @import "styles/index.css";
+      @import "./styles/home.css";
     </style>
-    <script type="text/javascript" src="scripts/index.js" ></script>
+    <script type="text/javascript" src="./scripts/home.js" ></script>
   </head>
 
   <body class="main">
