--- a/public/home.html
+++ b/public/home.html
@@ -1,91 +1,102 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta content="text/html; charset=UTF-8; X-Content-Type-Options=nosniff" http-equiv="Content-Type" />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
-    />
-    <title>Colectivo Angrama</title>
-    <style>
-      @import "./styles/home.css";
-    </style>
-    <script type="text/javascript" src="./scripts/home.js" ></script>
-  </head>
+	<head>
+		<meta charset="UTF-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
+		<meta
+			content="text/html; charset=UTF-8; X-Content-Type-Options=nosniff"
+			http-equiv="Content-Type"
+		/>
+		<link
+			rel="stylesheet"
+			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+		/>
+		<title>Colectivo Angrama</title>
+		<style>
+			@import './styles/home.css';
+		</style>
+		<script type="text/javascript" src="./scripts/home.js"></script>
+	</head>
 
-  <body class="main">
-    <div>
-      <div class="main_title"></div>
+	<body class="main">
+		<div>
+			<div class="main_title"></div>
 
-      <!-- Body -->
-      <div>
-        <div class="main_content"></div>
-      </div>
+			<!-- Body -->
+			<div>
+				<div class="main_content"></div>
+			</div>
 
-      <!-- Navigation Menu -->
-      <div class="navigation-bar">
-        <span> Inicio </span>
-        <span> Noticias </span>
-        <span> Proyectos </span>
-        <span> Contacto </span>
-        <span> Hackers </span>
-      </div>
+			<!-- Navigation Menu -->
+			<div class="navigation-bar">
+				<span> Inicio </span>
+				<span> Noticias </span>
+				<span> Proyectos </span>
+				<span> Contacto </span>
+				<span> Hackers </span>
+			</div>
 
-      <!-- Sidebar -->
-      <div class="sidebar-home">
-        <ul class="sidebar-nav-list">
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link"
-              >A1 <i class="fa fa-free-code-camp"></i
-            ></a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link">A2 <i class="fa fa-beer"></i></a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link">A3 <i class="fa fa-bug"></i></a>
-          </li>
-        </ul>
-      </div>
-      <div class="sidebar-notice">
-        <ul class="sidebar-nav-list">
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link"
-              >B1 <i class="fa fa fa-newspaper-o"></i
-            ></a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link"
-              >B2 <i class="fa fa-file-text"></i
-            ></a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link"
-              >B3 <i class="fa fa-external-link"></i
-            ></a>
-          </li>
-        </ul>
-      </div>
-      <div class="sidebar-proyects">
-        <ul class="sidebar-nav-list">
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link">C1 <i class="fa fa-book"></i></a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link"
-              >C2 <i class="fa fa-file-text"></i
-            ></a>
-          </li>
-          <li class="sidebar-item">
-            <a href="#" class="sidebar-link">C3 <i class="fa fa-file-o"></i></a>
-          </li>
-        </ul>
-      </div>
+			<!-- Sidebar -->
+			<div class="sidebar-home">
+				<ul class="sidebar-nav-list">
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>A1 <i class="fa fa-free-code-camp"></i
+						></a>
+					</li>
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>A2 <i class="fa fa-beer"></i
+						></a>
+					</li>
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>A3 <i class="fa fa-bug"></i
+						></a>
+					</li>
+				</ul>
+			</div>
+			<div class="sidebar-notice">
+				<ul class="sidebar-nav-list">
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>B1 <i class="fa fa fa-newspaper-o"></i
+						></a>
+					</li>
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>B2 <i class="fa fa-file-text"></i
+						></a>
+					</li>
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>B3 <i class="fa fa-external-link"></i
+						></a>
+					</li>
+				</ul>
+			</div>
+			<div class="sidebar-proyects">
+				<ul class="sidebar-nav-list">
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>C1 <i class="fa fa-book"></i
+						></a>
+					</li>
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>C2 <i class="fa fa-file-text"></i
+						></a>
+					</li>
+					<li class="sidebar-item">
+						<a href="#" class="sidebar-link"
+							>C3 <i class="fa fa-file-o"></i
+						></a>
+					</li>
+				</ul>
+			</div>
 
-      <!-- Contact Info -->
-      <div></div>
-    </div>
-  </body>
+			<!-- Contact Info -->
+			<div></div>
+		</div>
+	</body>
 </html>
