--- a/public/main.html
+++ b/public/main.html
@@ -11,36 +11,36 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
-		<title>Colectivo Anagrama</title>
-		<script type="module" src="./modules/main.js"></script>
+		<script type="module" src="modules/main.js"></script>
 		<style>
-			@import './styles/main.css';
+			@import 'styles/layout.css';
+			@import 'styles/main.css';
 		</style>
+
+		<title>Colectivo Anagrama</title>
 	</head>
 
 	<body>
-		<div id="main">
-			<div id="main_title"></div>
+		<div id="main" class="container__vertical">
+			<div id="main_title" class="vertical-item__1-10"></div>
 
 			<!-- BODY -->
-			<div id="main_content__container">
-				<div id="content_container__sidebar">sidebar</div>
+			<section id="main_content__container" class="vertical-item__8-10">
+				<div id="content_container__sidebar"></div>
 				<div id="main_content"></div>
 				<div id="content_container__leftover">aside</div>
-			</div>
+			</section>
 			<!-- END BODY -->
 
 			<!-- Navigation Menu -->
-			<div id="navigation-bar">
-				<span> Inicio </span>
-				<span id="navigation-bar_news"> Noticias </span>
-				<span> Proyectos </span>
-				<span> Contacto </span>
-				<span> Hackers </span>
+			<div id="navigation-bar" class="vertical-item__1-10">
+				<span id="navigation-bar_home" > Inicio </span>
+				<span id="navigation-bar_news" > Noticias </span>
+				<span id="navigation-bar_projects" > Proyectos </span>
+				<span id="navigation-bar_contact" > Contacto </span>
+				<span id="navigation-bar_hackers" > Hackers </span>
 			</div>
 
-			<!-- Contact Info -->
-			<div></div>
 		</div>
 	</body>
 </html>
