--- a/public/main.html
+++ b/public/main.html
@@ -26,7 +26,27 @@
 
 			<!-- BODY -->
 			<section id="main_content__container" class="vertical-item__8-10">
-				<div id="content_container__sidebar"></div>
+				<div id="content_container__sidebar">
+					<div id="sidebar_home__content">
+						<ul class="sidebar-nav-list">
+							<li class="sidebar-item">
+								<a href="#" class="sidebar-link"
+									>A1 <i class="fa fa-free-code-camp"></i
+								></a>
+							</li>
+							<li class="sidebar-item">
+								<a href="#" class="sidebar-link"
+									>A2 <i class="fa fa-beer"></i
+								></a>
+							</li>
+							<li class="sidebar-item">
+								<a href="#" class="sidebar-link"
+									>A3 <i class="fa fa-bug"></i
+								></a>
+							</li>
+						</ul>
+					</div>
+				</div>
 				<div id="main_content"></div>
 				<div id="content_container__leftover">aside</div>
 			</section>
@@ -34,13 +54,12 @@
 
 			<!-- Navigation Menu -->
 			<div id="navigation-bar" class="vertical-item__1-10">
-				<span id="navigation-bar_home" > Inicio </span>
-				<span id="navigation-bar_news" > Noticias </span>
-				<span id="navigation-bar_projects" > Proyectos </span>
-				<span id="navigation-bar_contact" > Contacto </span>
-				<span id="navigation-bar_hackers" > Hackers </span>
+				<span id="navigation-bar_home"> Inicio </span>
+				<span id="navigation-bar_news"> Noticias </span>
+				<span id="navigation-bar_projects"> Proyectos </span>
+				<span id="navigation-bar_contact"> Contacto </span>
+				<span id="navigation-bar_hackers"> Hackers </span>
 			</div>
-
 		</div>
 	</body>
 </html>
