Contact Sections Consolidated

--- a/public/main.html
+++ b/public/main.html
@@ -48,14 +48,14 @@
 					</div>
 				</div>
 				<div id="main_content"></div>
-				<div id="content_container__leftover">aside</div>
+				<div id="content_container__leftover"></div>
 			</section>
 			<!-- END BODY -->
 
 			<!-- Navigation Menu -->
 			<div id="navigation-bar" class="vertical-item__1-10">
 				<span id="navigation-bar_home"> Inicio </span>
-				<span id="navigation-bar_news"> Noticias </span>
+				<span id="navigation-bar_news"> Feeds </span>
 				<span id="navigation-bar_projects"> Proyectos </span>
 				<span id="navigation-bar_contact"> Contacto </span>
 				<span id="navigation-bar_hackers"> Hackers </span>
