--- a/public/main.html
+++ b/public/main.html
@@ -15,6 +15,7 @@
 		<style>
 			@import 'styles/layout.css';
 			@import 'styles/main.css';
+			@import 'styles/feeds.css';
 		</style>
 
 		<title>Colectivo Anagrama</title>
