Avoid redundant stylesheets

--- a/public/main.html
+++ b/public/main.html
@@ -13,6 +13,7 @@
 		/>
 		<script type="module" src="modules/main.js"></script>
 		<style>
+			@import 'styles/root.css';
 			@import 'styles/layout.css';
 			@import 'styles/main.css';
 			@import 'styles/feeds.css';
