Main content available from first fetch

--- a/public/main.html
+++ b/public/main.html
@@ -49,14 +49,30 @@
 						</ul>
 					</div>
 				</div>
-				<div id="main_content"></div>
+				<div id="main_content">
+					<div id="main_content__home">
+						<p>
+							El
+							<span id="colective-mention"
+								>Colectivo Anagrama</span
+							>
+							es una iniciativa cuyo propósito es consolidarse
+							como un frente de investigación e inovación en el
+							desarrollo de soluciones tecnológicas. Somos un
+							grupo de matemáticos y desarrolladores de software
+							que hace uso de recursos académicos y de acceso
+							libre para poder compartir ideas y proyectos que den
+							solución a problemas de diversa índole.
+						</p>
+					</div>
+				</div>
 				<div id="content_container__leftover"></div>
 			</section>
 			<!-- END BODY -->
 
 			<!-- Navigation Menu -->
 			<div id="navigation-bar" class="vertical-item__1-10">
-				<span id="navigation-bar_home" > Inicio </span>
+				<span id="navigation-bar_home"> Inicio </span>
 				<span id="navigation-bar_news"> Feeds </span>
 				<span id="navigation-bar_projects"> Proyectos </span>
 				<span id="navigation-bar_contact"> Contacto </span>
