fixing BEM and changing general styles

--- a/public/main.html
+++ b/public/main.html
@@ -24,13 +24,13 @@
 
 	<body>
 		<div id="main" class="container__vertical">
-			<div id="main_title" class="vertical-item__1-10"></div>
+			<div id="main-title" class="vertical-item__1-10"></div>
 
 			<!-- BODY -->
-			<section id="main_content__container" class="vertical-item__8-10">
-				<div id="content_container__sidebar">
-					<div id="sidebar_home__content">
-						<ul class="sidebar-nav-list">
+			<section id="main-container" class="vertical-item__8-10">
+				<div id="main-container__sidebar">
+					<div id="sidebar-home__content">
+						<ul class="sidebar-nav__list" hidden>
 							<li class="sidebar-item">
 								<a href="#" class="sidebar-link"
 									>A1 <i class="fa fa-free-code-camp"></i
@@ -49,8 +49,9 @@
 						</ul>
 					</div>
 				</div>
-				<div id="main_content">
-					<div id="main_content__home">
+
+				<div id="main-container__content">
+					<div id="main-content__home">
 						<p>
 							El
 							<span id="colective-mention"
@@ -61,22 +62,23 @@
 							desarrollo de soluciones tecnológicas. Somos un
 							grupo de matemáticos y desarrolladores de software
 							que hace uso de recursos académicos y de acceso
-							libre para poder compartir ideas y proyectos que den
-							solución a problemas de diversa índole.
+							libre para crear soluciones a problemáticas de
+							diversa índole.
 						</p>
 					</div>
 				</div>
-				<div id="content_container__leftover"></div>
+
+				<div id="main-container__leftover"></div>
 			</section>
 			<!-- END BODY -->
 
 			<!-- Navigation Menu -->
-			<div id="navigation-bar" class="vertical-item__1-10">
-				<span id="navigation-bar_home"> Inicio </span>
-				<span id="navigation-bar_news"> Feeds </span>
-				<span id="navigation-bar_projects"> Proyectos </span>
-				<span id="navigation-bar_contact"> Contacto </span>
-				<span id="navigation-bar_hackers"> Hackers </span>
+			<div id="main-navigation__bar">
+				<span id="navigation-bar__home"> Inicio </span>
+				<span id="navigation-bar__news"> Feeds </span>
+				<span id="navigation-bar__projects"> Proyectos </span>
+				<span id="navigation-bar__contact"> Contacto </span>
+				<span id="navigation-bar__hackers"> Hackers </span>
 			</div>
 		</div>
 	</body>
