Addding paper effect

--- a/public/main.html
+++ b/public/main.html
@@ -24,7 +24,19 @@
 
 	<body>
 		<div id="main" class="container__vertical">
-			<div id="main-title" class="vertical-item__1-10"></div>
+			<div id="main-title">
+				<div>
+					<div class="fa fa-bars main-button__context"></div>
+				</div>
+				<div class="main-title__gap"></div>
+				<div class="main-button__lookup">
+					<div class="fa fa-search main-button__context "></div>
+
+				</div>
+				<div class="main-button__theme">
+					<div class="fa fa-sun-o main-button__context"></div>
+				</div>
+			</div>
 
 			<!-- BODY -->
 			<section id="main-container" class="vertical-item__8-10">
@@ -80,7 +92,6 @@
 				<span id="navigation-bar__contact"> Contacto </span>
 				<span id="navigation-bar__hackers"> Hackers </span>
 			</div>
-
 		</div>
 	</body>
 </html>
