--- a/public/main.html
+++ b/public/main.html
@@ -24,21 +24,27 @@
 
 	<body>
 		<div id="main" class="container__vertical">
-			<div id="main-title">
-				<div>
-					<div class="fa fa-bars main-button__context"></div>
+			<!-- Navigation Menu -->
+			<div id="main-header">
+				<div id="main-header__logo" >
+					<div id="logo__text">
+						anagrama
+					</div>
 				</div>
-				<div class="main-title__gap"></div>
-				<div class="main-button__lookup">
-					<div class="fa fa-search main-button__context"></div>
+				<div id="main-header__gap" >
+
 				</div>
-				<div class="main-button__theme">
-					<div class="fa fa-sun-o main-button__context"></div>
+				<div id="main-header__menu">
+					<span id="menu__home"> Inicio </span>
+					<span id="menu__news"> Feeds </span>
+					<span id="menu__projects"> Proyectos </span>
+					<span id="menu__contact"> Contacto </span>
+					<span id="menu__hackers"> Hackers </span>
 				</div>
 			</div>
 
 			<!-- BODY -->
-			<section id="main-container" class="vertical-item__8-10">
+			<section id="main-container" >
 				<div id="main-container__sidebar">
 					<div id="sidebar-home__content">
 						<ul class="sidebar-nav__list" hidden>
@@ -83,14 +89,6 @@
 			</section>
 			<!-- END BODY -->
 
-			<!-- Navigation Menu -->
-			<div id="main-navigation__bar">
-				<span id="navigation-bar__home"> Inicio </span>
-				<span id="navigation-bar__news"> Feeds </span>
-				<span id="navigation-bar__projects"> Proyectos </span>
-				<span id="navigation-bar__contact"> Contacto </span>
-				<span id="navigation-bar__hackers"> Hackers </span>
-			</div>
 		</div>
 	</body>
 </html>
