--- a/public/main.html
+++ b/public/main.html
@@ -26,25 +26,21 @@
 		<div id="main" class="container__vertical">
 			<!-- Navigation Menu -->
 			<div id="main-header">
-				<div id="main-header__logo" >
-					<div id="logo__text">
-						anagrama
-					</div>
+				<div id="main-header__logo">
+					<div id="logo__text">anagrama</div>
 				</div>
-				<div id="main-header__gap" >
-
-				</div>
+				<div id="main-header__gap"></div>
 				<div id="main-header__menu">
-					<span id="menu__home"> Inicio </span>
-					<span id="menu__news"> Feeds </span>
-					<span id="menu__projects"> Proyectos </span>
-					<span id="menu__contact"> Contacto </span>
-					<span id="menu__hackers"> Hackers </span>
+					<div id="menu__home"><span>Inicio</span></div>
+					<div id="menu__news">Feeds</div>
+					<div id="menu__projects">Proyectos</div>
+					<div id="menu__contact">Contacto</div>
+					<div id="menu__hackers">Hackers</div>
 				</div>
 			</div>
 
 			<!-- BODY -->
-			<section id="main-container" >
+			<section id="main-container">
 				<div id="main-container__sidebar">
 					<div id="sidebar-home__content">
 						<ul class="sidebar-nav__list" hidden>
@@ -88,7 +84,6 @@
 				<div id="main-container__leftover"></div>
 			</section>
 			<!-- END BODY -->
-
 		</div>
 	</body>
 </html>
