completing general style

--- a/public/main.html
+++ b/public/main.html
@@ -43,21 +43,18 @@
 			<section id="main-container">
 				<div id="main-container__sidebar">
 					<div id="sidebar-home__content">
-						<ul class="sidebar-nav__list" hidden>
+						<ul class="sidebar-nav__list" >
 							<li class="sidebar-item">
 								<a href="#" class="sidebar-link"
-									>A1 <i class="fa fa-free-code-camp"></i
-								></a>
+									> Misión </a>
 							</li>
 							<li class="sidebar-item">
 								<a href="#" class="sidebar-link"
-									>A2 <i class="fa fa-beer"></i
-								></a>
+									> Visión </a>
 							</li>
 							<li class="sidebar-item">
 								<a href="#" class="sidebar-link"
-									>A3 <i class="fa fa-bug"></i
-								></a>
+									> Propósito </a>
 							</li>
 						</ul>
 					</div>
