--- a/public/main.html
+++ b/public/main.html
@@ -43,18 +43,15 @@
 			<section id="main-container">
 				<div id="main-container__sidebar">
 					<div id="sidebar-home__content">
-						<ul class="sidebar-nav__list" >
+						<ul class="sidebar-nav__list">
 							<li class="sidebar-item">
-								<a href="#" class="sidebar-link"
-									> Misión </a>
+								<a href="#" class="sidebar-link"> Misión </a>
 							</li>
 							<li class="sidebar-item">
-								<a href="#" class="sidebar-link"
-									> Visión </a>
+								<a href="#" class="sidebar-link"> Visión </a>
 							</li>
 							<li class="sidebar-item">
-								<a href="#" class="sidebar-link"
-									> Propósito </a>
+								<a href="#" class="sidebar-link"> Valores </a>
 							</li>
 						</ul>
 					</div>
@@ -70,10 +67,10 @@
 							es una iniciativa cuyo propósito es consolidarse
 							como un frente de investigación e inovación en el
 							desarrollo de soluciones tecnológicas. Somos un
-							grupo de matemáticos y desarrolladores de software
-							que hace uso de recursos académicos y de acceso
-							libre para crear soluciones a problemáticas de
-							diversa índole.
+							grupo de profesionales de diversas disciplinas que
+							hace uso de recursos académicos y de acceso libre
+							para crear soluciones de software relevantes en el
+							mundo contemporáneo.
 						</p>
 					</div>
 				</div>
