heading to minimalism

--- a/public/main.html
+++ b/public/main.html
@@ -42,8 +42,8 @@
 			<!-- BODY -->
 			<section id="main-container">
 				<div id="main-container__sidebar">
-					<div id="sidebar-home__content">
-						<ul class="sidebar-nav__list">
+					<div id="sidebar-home__content" >
+						<ul class="sidebar-nav__list" hidden>
 							<li class="sidebar-item">
 								<a href="#" class="sidebar-link"> Misión </a>
 							</li>
@@ -59,18 +59,14 @@
 
 				<div id="main-container__content">
 					<div id="main-content__home">
-						<p>
+						<p class="home-text__presentation" >
 							El
 							<span id="colective-mention"
 								>Colectivo Anagrama</span
 							>
 							es una iniciativa cuyo propósito es consolidarse
 							como un frente de investigación e inovación en el
-							desarrollo de soluciones tecnológicas. Somos un
-							grupo de profesionales de diversas disciplinas que
-							hace uso de recursos académicos y de acceso libre
-							para crear soluciones de software relevantes en el
-							mundo contemporáneo.
+							desarrollo de soluciones tecnológicas.
 						</p>
 					</div>
 				</div>
