--- a/public/index.html
+++ b/public/index.html
@@ -42,7 +42,7 @@
 			<!-- BODY -->
 			<section id="main-container">
 				<div id="main-container__sidebar">
-					<div id="sidebar-home__content" >
+					<div id="sidebar-home__content">
 						<ul class="sidebar-nav__list" hidden>
 							<li class="sidebar-item">
 								<a href="#" class="sidebar-link"> Misión </a>
@@ -59,15 +59,41 @@
 
 				<div id="main-container__content">
 					<div id="main-content__home">
-						<p class="home-text__presentation" >
-							El
-							<span id="colective-mention"
-								>Colectivo Anagrama</span
-							>
-							es una iniciativa cuyo propósito es consolidarse
-							como un frente de investigación e inovación en el
-							desarrollo de soluciones tecnológicas.
-						</p>
+						<div class="home-text__presentation">
+							<p>
+								El
+								<span class="colective-mention"
+									>Colectivo Anagrama</span
+								>
+								es una iniciativa cuyo propósito es consolidarse
+								como un frente de investigación e inovación en
+								el desarrollo de soluciones tecnológicas.
+							</p>
+						</div>
+						<div class="home-text__presentation">
+							<p>
+								Somos un grupo de profesionales de diversas
+								disciplinas que comparte ideas, proyectos y
+								<span class="colective-bold">
+									conocimiento.
+								</span>
+							</p>
+						</div>
+						<div class="home-text__presentation">
+							<p>
+								Buscamos construir una organización alternativa
+								enfocada en el
+								<span class="colective-mention"
+									>código abierto </span
+								>y la federación de contenido.
+							</p>
+						</div>
+
+						<div class="home-text__presentation">
+							<p>
+								Crea con nosotros
+							</p>
+						</div>
 					</div>
 				</div>
 
