Starting with lit-html

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,9 @@
 			rel="stylesheet"
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
-		<script type="module" src="modules/main.js"></script>
+
+		<script type="module" src="modules/index/index.js"></script>
+
 		<style>
 			@import 'styles/root.css';
 			@import 'styles/layout.css';
@@ -23,83 +25,5 @@
 	</head>
 
 	<body>
-		<div id="main" class="container__vertical">
-			<!-- Navigation Menu -->
-			<div id="main-header">
-				<div id="main-header__logo">
-					<div id="logo__text">anagrama</div>
-				</div>
-				<div id="main-header__gap"></div>
-				<div id="main-header__menu">
-					<div id="menu__home"><span>Inicio</span></div>
-					<div id="menu__news">Feeds</div>
-					<div id="menu__projects">Proyectos</div>
-					<div id="menu__contact">Contacto</div>
-					<div id="menu__hackers">Hackers</div>
-				</div>
-			</div>
-
-			<!-- BODY -->
-			<section id="main-container">
-				<div id="main-container__sidebar">
-					<div id="sidebar-home__content">
-						<ul class="sidebar-nav__list" hidden>
-							<li class="sidebar-item">
-								<a href="#" class="sidebar-link"> Misión </a>
-							</li>
-							<li class="sidebar-item">
-								<a href="#" class="sidebar-link"> Visión </a>
-							</li>
-							<li class="sidebar-item">
-								<a href="#" class="sidebar-link"> Valores </a>
-							</li>
-						</ul>
-					</div>
-				</div>
-
-				<div id="main-container__content">
-					<div id="main-content__home">
-						<div class="home-text__presentation">
-							<p>
-								El
-								<span class="colective-mention"
-									>Colectivo Anagrama</span
-								>
-								es una iniciativa cuyo propósito es consolidarse
-								como un frente de investigación e inovación en
-								el desarrollo de soluciones tecnológicas.
-							</p>
-						</div>
-						<div class="home-text__presentation">
-							<p>
-								Somos un grupo de profesionales de diversas
-								disciplinas que comparte ideas, proyectos y
-								<span class="colective-bold">
-									conocimiento.
-								</span>
-							</p>
-						</div>
-						<div class="home-text__presentation">
-							<p>
-								Buscamos construir una organización alternativa
-								enfocada en el
-								<span class="colective-mention"
-									>código abierto </span
-								>y la federación de contenido.
-							</p>
-						</div>
-
-						<div class="home-text__presentation">
-							<p>
-								Crea con nosotros
-							</p>
-						</div>
-					</div>
-				</div>
-
-				<div id="main-container__leftover"></div>
-			</section>
-			<!-- END BODY -->
-		</div>
-	</body>
+	</body> 
 </html>
