Starting with Web Components

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 			href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
 		/>
 
-		<script type="module" src="modules/index/index.js"></script>
+		<script type="module" src="modules/index.js"></script>
 
 		<style>
 			@import 'styles/root.css';
